--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
         font-family: "Chivo", sans-serif;
         color: rgb(68, 65, 65);
         font-weight: bolder;
+        padding-top: 5%;
       }
 
       h4 {
