--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@ let now = new Date();
   let hours = now.getHours();
   let minutes = now.getMinutes();
   if (minutes < 10) {
-  minute = `0${minutes}`;
+  minutes = `0${minutes}`;
 }
   let year = now.getFullYear();
 
