--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <title>Weather App</title>
     <style>
+    
       h1 {
         display: block;
         text-align: center;
@@ -25,7 +26,7 @@
         margin: 0 auto;
         padding-top: 60px;
         padding-bottom: 1px;
-        background-image: url(https://images.pexels.com/photos/4203094/pexels-photo-4203094.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500);
+        background-image: url(https://images.unsplash.com/photo-1534996858221-380b92700493?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&auto=format&fit=crop&w=889&q=80);
       }
       
       h2 {
@@ -38,9 +39,9 @@
         padding-bottom: 1px;
         max-width: 350px;
         margin: 0 auto;
-        color: rgb(32, 32, 32);
+        color: rgb(3, 3, 3);
         border: rgb(97, 93, 93) 1px solid;
-        background-color: rgb(157, 185, 216);
+        background-color: #96a1c0;
         border-radius: 10px;
       }
       ul {
@@ -97,6 +98,7 @@
       .icono {
         font-size: 70px;
       }
+
       .app {
         display: block;
         text-align: center;
@@ -104,7 +106,7 @@
         max-width: 500px;
         margin: 0 auto;
         border: rgb(97, 93, 93) 5px solid;
-        background-image: linear-gradient(to top, #accbee 0%, #e7f0fd 100%);
+        background-image: linear-gradient(to top, #c7dff7 0%, #a6c2eb 100%);
         border-radius: 10px;
       }
 
@@ -133,7 +135,7 @@
         color: rgb(255, 255, 255);
         font-family: "Chivo", sans-serif;
         border: rgb(97, 93, 93) 1px solid;
-        background-color: rgb(10, 44, 138);
+        background-color: #20204d;
         border-radius: 50px;
         font-weight: 200;
         font-size: 20px;
