--- a/index.html
+++ b/index.html
@@ -13,7 +13,13 @@
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <title>Weather App</title>
     <style>
-    
+    body {
+      font-family: "Comfortaa", cursive, sans-serif;
+      background-image: url(https://images.pexels.com/photos/220201/pexels-photo-220201.jpeg?auto=compress&cs=tinysrgb&h=650&w=940);
+      background-repeat: no-repeat;
+      background-size: cover;
+      background-position: center;
+}
       h1 {
         display: block;
         text-align: center;
@@ -26,7 +32,7 @@
         margin: 0 auto;
         padding-top: 60px;
         padding-bottom: 1px;
-        background-image: url(https://images.unsplash.com/photo-1534996858221-380b92700493?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&auto=format&fit=crop&w=889&q=80);
+        background-color: #20204d;
       }
       
       h2 {
@@ -106,8 +112,9 @@
         max-width: 500px;
         margin: 0 auto;
         border: rgb(97, 93, 93) 5px solid;
-        background-image: linear-gradient(to top, #c7dff7 0%, #a6c2eb 100%);
+        background-image: linear-gradient(to top, #fafafa 0%, #a6c2eb 100%);
         border-radius: 10px;
+        opacity: 0.85;
       }
 
       hr {
