--- a/index.html
+++ b/index.html
@@ -33,14 +33,14 @@
         margin: 0 auto;
         padding-top: 1cm;
         padding-bottom: 1px;
-        background-color: #ffffff;
+        background-color: #ddd8d8;
         opacity: 0.85;
       }
       .details {
         display: block;
         list-style-type: none;
         text-align: center;
-        font-weight: lighter;
+        font-weight: bolder;
         font-family: "Chivo", sans-serif;
         font-size: 15px;
         padding-left: 0.5cm;
@@ -75,6 +75,7 @@
         color: rgb(68, 65, 65);
         font-weight: bolder;
         padding-top: 5%;
+        font-size: 30px;
       }
 
       h4 {
@@ -82,18 +83,21 @@
         font-family: "Chivo", sans-serif;
         color: rgb(68, 65, 65);
         font-weight: bolder;
+        font-size: 30px;
       }
 
       h5 {
         text-align: center;
         font-family: "Chivo", sans-serif;
         color: rgb(0, 0, 0);
+        font-size: 20px;
       }
 
       h6 {
         text-align: center;
         font-family: "Chivo", sans-serif;
         color: rgb(0, 0, 0);
+        font-size: 20px;
 
       }
 
@@ -101,6 +105,7 @@
         text-align: center;
         font-family: "Chivo", sans-serif;
         color: rgb(0, 0, 0);
+        font-size: 20px;
       }
 
       input {
@@ -124,7 +129,7 @@
         font-weight: lighter;
         font-family: "Chivo", sans-serif;
         font-size: 20px;
-        padding-top: 1cm;
+        padding-top: 1.2cm;
         padding-bottom: 1cm;
         max-width: 400px;
         min-width: 400px;
@@ -175,7 +180,7 @@
         background-color: #20204d;
         border-radius: 50px;
         font-weight: 200;
-        font-size: 20px;
+        font-size: 18px;
       }
       .description {
         text-transform: capitalize;
@@ -193,7 +198,7 @@
             autofocus="on"
             id="search-text-input"
           />
-          <input type="submit" value="Search" />
+          <input type="submit" value="🔍" />
         </form>
         
         <button 
