--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         display: block;
         text-align: center;
         font-weight: bolder;
-        color: rgb(0, 0, 0);
+        color: rgb(255, 255, 255);
         font-family: "Chivo", sans-serif;
         border: rgb(97, 93, 93) 1px solid;
         max-width: 300px;
@@ -33,7 +33,7 @@
         margin: 0 auto;
         padding-top: 1cm;
         padding-bottom: 1px;
-        background-color: #ddd8d8;
+        background-color: #0e1f3a;
         opacity: 0.85;
       }
       .details {
@@ -45,7 +45,7 @@
         font-size: 15px;
         padding-left: 0.5cm;
         padding-right: 1.5cm;
-        color: rgb(3, 3, 3);
+        color: rgb(255, 255, 255);
       }
 
       /*h2 {
@@ -138,7 +138,7 @@
         border: rgb(97, 93, 93) 1px solid;
         background-color: #96a1c0;
         border-radius: 10px;
-        background-image: url(https://images.pexels.com/photos/220201/pexels-photo-220201.jpeg?auto=compress&cs=tinysrgb&h=650&w=940);
+        background-image: url(https://images.unsplash.com/photo-1446776811953-b23d57bd21aa?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&auto=format&fit=crop&w=1052&q=80);
 }
 
       .app {
