--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
         </div>
          
         <br>
-      
+        <div class="forecast">
         <div class="row 3">
           <div class="col 7">
             Mon
@@ -296,6 +296,8 @@
             5°/-1°
           </div>
         </div>
+      </div>
+
       </div>
     </section>
 <script>
