--- a/index.html
+++ b/index.html
@@ -270,6 +270,8 @@
       </div>
     </section>
 <script>
+
+//Date//
 let now = new Date();
 
   let h4 = document.querySelector("h4");
@@ -305,6 +307,8 @@ let now = new Date();
             <hr>`;
 
     h5.innerHTML = `${day}`;
+
+//Searcher//
 
 function search(event) {
     event.preventDefault();
