--- a/index.html
+++ b/index.html
@@ -443,7 +443,7 @@ function showFahrenheitTemperature(event) {
   let temperatureElement = document.querySelector("#temperature");
   // remove/add the active class frokm the celsius link
   celsiusLink.classList.remove("active");
-  fahrenheitLink.classList.add("active");
+  fahrenheitLink.classList.add("active")
   let fahrenheitTemperature = (celsiusTemperature * 9 / 5) + 32;
   temperatureElement.innerHTML = Math.round(fahrenheitTemperature);
 }
